--- a/_modules/orion/evaluation/contextual.html
+++ b/_modules/orion/evaluation/contextual.html
@@ -215,7 +215,7 @@
 
 <div class="viewcode-block" id="contextual_confusion_matrix"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.contextual_confusion_matrix.html#orion.evaluation.contextual_confusion_matrix">[docs]</a><span class="k">def</span> <span class="nf">contextual_confusion_matrix</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                                 <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">weighted</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute the confusion matrix between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute the confusion matrix between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of tuples):</span>
@@ -264,7 +264,7 @@
 
 
 <div class="viewcode-block" id="contextual_accuracy"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.contextual_accuracy.html#orion.evaluation.contextual_accuracy">[docs]</a><span class="k">def</span> <span class="nf">contextual_accuracy</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">weighted</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an accuracy score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an accuracy score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of tuples):</span>
@@ -294,7 +294,7 @@
 
 
 <div class="viewcode-block" id="contextual_precision"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.contextual_precision.html#orion.evaluation.contextual_precision">[docs]</a><span class="k">def</span> <span class="nf">contextual_precision</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">weighted</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an precision score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an precision score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of tuples):</span>
@@ -324,7 +324,7 @@
 
 
 <div class="viewcode-block" id="contextual_recall"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.contextual_recall.html#orion.evaluation.contextual_recall">[docs]</a><span class="k">def</span> <span class="nf">contextual_recall</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">weighted</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an recall score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an recall score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of tuples):</span>
@@ -354,7 +354,7 @@
 
 
 <div class="viewcode-block" id="contextual_f1_score"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.contextual_f1_score.html#orion.evaluation.contextual_f1_score">[docs]</a><span class="k">def</span> <span class="nf">contextual_f1_score</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">weighted</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an f1 score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an f1 score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of tuples):</span>
