--- a/_modules/orion/evaluation/point.html
+++ b/_modules/orion/evaluation/point.html
@@ -182,7 +182,7 @@
 
 
 <div class="viewcode-block" id="point_confusion_matrix"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.point_confusion_matrix.html#orion.evaluation.point_confusion_matrix">[docs]</a><span class="k">def</span> <span class="nf">point_confusion_matrix</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute the confusion matrix between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute the confusion matrix between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of timestamps):</span>
@@ -220,7 +220,7 @@
 
 
 <div class="viewcode-block" id="point_accuracy"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.point_accuracy.html#orion.evaluation.point_accuracy">[docs]</a><span class="k">def</span> <span class="nf">point_accuracy</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an accuracy score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an accuracy score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of timestamps):</span>
@@ -245,7 +245,7 @@
 
 
 <div class="viewcode-block" id="point_precision"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.point_precision.html#orion.evaluation.point_precision">[docs]</a><span class="k">def</span> <span class="nf">point_precision</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an precision score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an precision score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of timestamps):</span>
@@ -270,7 +270,7 @@
 
 
 <div class="viewcode-block" id="point_recall"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.point_recall.html#orion.evaluation.point_recall">[docs]</a><span class="k">def</span> <span class="nf">point_recall</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an recall score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an recall score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of timestamps):</span>
@@ -295,7 +295,7 @@
 
 
 <div class="viewcode-block" id="point_f1_score"><a class="viewcode-back" href="../../../api_reference/api/orion.evaluation.point_f1_score.html#orion.evaluation.point_f1_score">[docs]</a><span class="k">def</span> <span class="nf">point_f1_score</span><span class="p">(</span><span class="n">expected</span><span class="p">,</span> <span class="n">observed</span><span class="p">,</span> <span class="n">data</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Compute an f1 score between the ground truth and the detected anomalies.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an f1 score between the ground truth and the detected anomalies.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        expected (DataFrame or list of timestamps):</span>
