--- a/_modules/orion/functional.html
+++ b/_modules/orion/functional.html
@@ -214,7 +214,7 @@
                  <span class="n">pipeline</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">MLPipeline</span><span class="p">,</span> <span class="nb">dict</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                  <span class="n">hyperparameters</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                  <span class="n">save_path</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Orion</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Fit an Orion pipeline to the data.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Fit an Orion pipeline to the data.</span>
 
 <span class="sd">    The pipeine can be passed as:</span>
 <span class="sd">        * An ``str`` with a path to a JSON file.</span>
@@ -268,7 +268,7 @@
                      <span class="n">pipeline</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">Orion</span><span class="p">,</span> <span class="nb">str</span><span class="p">,</span> <span class="n">MLPipeline</span><span class="p">,</span> <span class="nb">dict</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                      <span class="n">hyperparameters</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                      <span class="n">train_data</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Detect anomalies on timeseries data.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Detect anomalies on timeseries data.</span>
 
 <span class="sd">    The anomalies are detected using an Orion pipeline which can</span>
 <span class="sd">    be passed as:</span>
@@ -327,7 +327,7 @@
                       <span class="n">hyperparameters</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                       <span class="n">metrics</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Union</span><span class="p">[</span><span class="n">callable</span><span class="p">,</span> <span class="nb">str</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                       <span class="n">train_data</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Evaluate the performance of a pipeline.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Evaluate the performance of a pipeline.</span>
 
 <span class="sd">    The pipeline is evaluated by executing it on a signal</span>
 <span class="sd">    for which anomalies are known and then applying one or</span>
