--- a/_modules/orion/primitives/timeseries_preprocessing.html
+++ b/_modules/orion/primitives/timeseries_preprocessing.html
@@ -157,7 +157,7 @@
 
 
 <span class="k">def</span> <span class="nf">slice_array_by_dims</span><span class="p">(</span><span class="n">X</span><span class="p">,</span> <span class="n">target_index</span><span class="p">,</span> <span class="n">axis</span><span class="o">=</span><span class="mi">0</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Slice an ndarray by given dimensions.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Slice an ndarray by given dimensions.</span>
 
 <span class="sd">    This function creates a copy of X then slices the array from the specificed</span>
 <span class="sd">    dimension and returns the sliced array of the specified index.</span>
@@ -189,7 +189,7 @@
 
 
 <div class="viewcode-block" id="fillna"><a class="viewcode-back" href="../../../api_reference/api/orion.primitives.timeseries_preprocessing.fillna.html#orion.primitives.timeseries_preprocessing.fillna">[docs]</a><span class="k">def</span> <span class="nf">fillna</span><span class="p">(</span><span class="n">X</span><span class="p">,</span> <span class="n">value</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">method</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">axis</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">limit</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">downcast</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Impute missing values.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Impute missing values.</span>
 
 <span class="sd">    This function fills the missing values of the input sequence with the next/</span>
 <span class="sd">    previous known value. If there are contigous NaN values, they will all be</span>
