--- a/user_guides/primitives_pipelines/primitives/intervals_to_mask.html
+++ b/user_guides/primitives_pipelines/primitives/intervals_to_mask.html
@@ -243,7 +243,7 @@
 <span class="gp">In [5]: </span><span class="n">intervals</span> <span class="o">=</span> <span class="p">[(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">3</span><span class="p">),</span> <span class="p">(</span><span class="mi">7</span><span class="p">,</span> <span class="mi">7</span><span class="p">)]</span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">index</span><span class="o">=</span><span class="n">index</span><span class="p">,</span> <span class="n">intervals</span><span class="o">=</span><span class="n">intervals</span><span class="p">)</span>
-<span class="gh">Out[6]: </span><span class="go"></span>
+<span class="gh">Out[6]: </span>
 <span class="go">array([False,  True,  True,  True, False, False, False,  True, False,</span>
 <span class="go">       False])</span>
 </pre></div>
