--- a/_modules/orion/primitives/tadgan.html
+++ b/_modules/orion/primitives/tadgan.html
@@ -194,7 +194,7 @@
 
 
 <div class="viewcode-block" id="TadGAN"><a class="viewcode-back" href="../../../api_reference/api/orion.primitives.tadgan.TadGAN.html#orion.primitives.tadgan.TadGAN">[docs]</a><span class="k">class</span> <span class="nc">TadGAN</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;TadGAN model for time series reconstruction.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;TadGAN model for time series reconstruction.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        layers_encoder (list):</span>
@@ -284,7 +284,7 @@
                  <span class="n">learning_rate</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">0.005</span><span class="p">,</span> <span class="n">epochs</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">50</span><span class="p">,</span> <span class="n">batch_size</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">64</span><span class="p">,</span>
                  <span class="n">iterations_critic</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">5</span><span class="p">,</span> <span class="n">shuffle</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span> <span class="n">detailed_losses</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
                  <span class="n">verbose</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">bool</span><span class="p">]</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span> <span class="o">**</span><span class="n">hyperparameters</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Initialize the TadGAN model.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Initialize the TadGAN model.&quot;&quot;&quot;</span>
         <span class="nb">super</span><span class="p">(</span><span class="n">TadGAN</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span>
 
         <span class="c1"># Required model hyperparameters to construct model.</span>
@@ -365,7 +365,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">critic_z_input_shape</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">latent_shape</span>
 
     <span class="k">def</span> <span class="nf">_format_losses</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">losses</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">dict</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Format losses into dictionary mapping metric names to their current value.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Format losses into dictionary mapping metric names to their current value.&quot;&quot;&quot;</span>
         <span class="n">output</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">detailed_losses</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">losses</span><span class="p">)):</span>
@@ -491,7 +491,7 @@
                 <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Epoch: </span><span class="si">{}</span><span class="s1">/</span><span class="si">{}</span><span class="s1">, Losses: </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">epoch</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">epochs</span><span class="p">,</span> <span class="n">losses</span><span class="p">))</span>
 
     <span class="k">def</span> <span class="nf">fit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">:</span> <span class="n">ndarray</span><span class="p">,</span> <span class="n">y</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ndarray</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Fit the TadGAN model.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Fit the TadGAN model.</span>
 
 <span class="sd">        Args:</span>
 <span class="sd">            X (ndarray):</span>
@@ -515,7 +515,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">fitted</span> <span class="o">=</span> <span class="kc">True</span>
 
     <span class="k">def</span> <span class="nf">predict</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">X</span><span class="p">:</span> <span class="n">ndarray</span><span class="p">,</span> <span class="n">y</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ndarray</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">tuple</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Predict using TadGAN model.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Predict using TadGAN model.</span>
 
 <span class="sd">        Args:</span>
 <span class="sd">            X (ndarray):</span>
@@ -540,7 +540,7 @@
 
 
 <span class="k">def</span> <span class="nf">_compute_critic_score</span><span class="p">(</span><span class="n">critics</span><span class="p">:</span> <span class="n">ndarray</span><span class="p">,</span> <span class="n">smooth_window</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ndarray</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Compute an array of anomaly scores.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an array of anomaly scores.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        critics (ndarray):</span>
@@ -571,7 +571,7 @@
                     <span class="n">error_smooth_window</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">smooth</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
                     <span class="n">rec_error_type</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;point&quot;</span><span class="p">,</span> <span class="n">comb</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;mult&quot;</span><span class="p">,</span>
                     <span class="n">lambda_rec</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">0.5</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">tuple</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Compute an array of anomaly scores.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute an array of anomaly scores.</span>
 
 <span class="sd">    Anomaly scores are calculated using a combination of reconstruction error and critic score.</span>
 
