--- a/user_guides/primitives_pipelines/primitives/MinMaxScaler.html
+++ b/user_guides/primitives_pipelines/primitives/MinMaxScaler.html
@@ -251,7 +251,7 @@
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
-<span class="gh">Out[6]: </span><span class="go"></span>
+<span class="gh">Out[6]: </span>
 <span class="go">array([[0.  ],</span>
 <span class="go">       [0.25],</span>
 <span class="go">       [0.5 ],</span>
