--- a/user_guides/primitives_pipelines/primitives/time_segments_aggregate.html
+++ b/user_guides/primitives_pipelines/primitives/time_segments_aggregate.html
@@ -260,7 +260,7 @@
 <span class="gp">In [4]: </span><span class="n">X</span><span class="p">,</span> <span class="n">index</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">df</span><span class="p">)</span>
 
 <span class="gp">In [5]: </span><span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">({</span><span class="s2">&quot;timestamp&quot;</span><span class="p">:</span> <span class="n">index</span><span class="p">,</span> <span class="s2">&quot;value&quot;</span><span class="p">:</span> <span class="n">X</span><span class="p">[:,</span> <span class="mi">0</span><span class="p">]})</span>
-<span class="gh">Out[5]: </span><span class="go"></span>
+<span class="gh">Out[5]: </span>
 <span class="go">   timestamp  value</span>
 <span class="go">0          0    1.0</span>
 <span class="go">1         10    1.0</span>
