--- a/_modules/orion/benchmark.html
+++ b/_modules/orion/benchmark.html
@@ -204,11 +204,11 @@
 
 <span class="n">VERIFIED_PIPELINES_GPU</span> <span class="o">=</span> <span class="p">{</span>
     <span class="s1">&#39;arima&#39;</span><span class="p">:</span> <span class="s1">&#39;arima&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;lstm_dynamic_threshold&#39;</span><span class="p">:</span> <span class="s1">&#39;lstm_dynamic_threshold_gpu&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;lstm_dynamic_threshold&#39;</span><span class="p">:</span> <span class="s1">&#39;lstm_dynamic_threshold&#39;</span><span class="p">,</span>
     <span class="s1">&#39;azure&#39;</span><span class="p">:</span> <span class="s1">&#39;azure&#39;</span><span class="p">,</span>
     <span class="s1">&#39;tadgan&#39;</span><span class="p">:</span> <span class="s1">&#39;tadgan_without_dropout_gpu&#39;</span><span class="p">,</span>
     <span class="s1">&#39;aer&#39;</span><span class="p">:</span> <span class="s1">&#39;aer&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;lstm_autoencoder&#39;</span><span class="p">:</span> <span class="s1">&#39;lstm_autoencoder_gpu&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;lstm_autoencoder&#39;</span><span class="p">:</span> <span class="s1">&#39;lstm_autoencoder&#39;</span><span class="p">,</span>
     <span class="s1">&#39;dense_autoencoder&#39;</span><span class="p">:</span> <span class="s1">&#39;dense_autoencoder&#39;</span><span class="p">,</span>
     <span class="s1">&#39;vae&#39;</span><span class="p">:</span> <span class="s1">&#39;vae&#39;</span>
 <span class="p">}</span>
